fixed spacing with like/dislike count

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -161,10 +161,10 @@ img {
 
 .like {
     text-align: center;
-    /* margin-right: 10px; */
+    margin-right: 10px;
 }
 
 .dislike {
     text-align: center;
-    /* margin-right: 10px; */
+    margin-right: 10px;
 }
